# PRODIGY_CS_05

./: README.md  app.py  pyproject.toml
backend/: app.py  requirements.txt
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  PacketTable.js
static/: main.css  main.js
templates/: index.html
