[tool.poetry]
name = "prodigy_cs_05"
version = "0.1.0"
description = "Develop a simple image encryption tool using pixel manipulation."
authors = ["Tanvi228-yadav <your-email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
# pillow = "^10.0.0"   # Uncomment if you use Pillow for image processing

[tool.poetry.group.dev.dependencies]
# Add your dev dependencies here, e.g. pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"