[tool.poetry]
name = "prodigy_cs_05"
version = "0.1.0"
description = "Develop a simple image encryption tool using pixel manipulation."
authors = ["Tanvi228-yadav <yadavtanvi536@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
gunicorn = "^21.2.0"
pillow = "^10.0.0"
scapy = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"